--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -82,7 +82,7 @@
   <div class="signup-container">
     <h2>Sign Up</h2>
  
-  <form class="signup-form"  action="homepage.html" >
+  <form class="signup-form"  action="/signupSubmit" >
       <label for="fname">Fullname</label>
       <input type="text" id="fname" name="firstname" required>
       
