--- a/public/login.html
+++ b/public/login.html
@@ -76,7 +76,7 @@
 <body>
   <div class="signin-container">
     <h2>Welcome to Sign In Page</h2>
-    <form class="signin-form" action="homepage.html">
+    <form class="signin-form" action="/loginSubmit">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" required>
       
